<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="26dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="107dp"
        android:layout_height="28dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:text="@string/nombre"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/campoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="Pepito Perez"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/labelNombre"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNombre" />


    <TextView
        android:id="@+id/campoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/example_dominio_com"
        android:textColor="@color/colorPrimary"

        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/labelEmail"
        app:layout_constraintTop_toBottomOf="@+id/campoNombre" />

    <TextView
        android:id="@+id/labelTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/telefono"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

    <TextView
        android:id="@+id/campoTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/_57_123456789"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/labelTelefono"
        app:layout_constraintTop_toBottomOf="@+id/campoEmail" />

    <Button
        android:id="@+id/button3"
        android:layout_width="181dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/cambiar_password"

        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="393dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/cerrar_sesion"

        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toEndOf="@+id/button3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="393dp" />

</androidx.constraintlayout.widget.ConstraintLayout>