<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="138dp"
        android:background="@color/colorPrimary"
        android:text="@string/resgistrate_ya"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btInicio"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegistro"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="137dp"
        android:background="@color/colorPrimary"
        android:text="@string/ya_tengo_cuenta"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistro" />

    <Button
        android:id="@+id/btnAnonimo"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btInicio"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="138dp"
        android:background="@color/colorPrimary"
        android:text="@string/anonimo"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btInicio" />
</androidx.constraintlayout.widget.ConstraintLayout>